# Sharks-Save-Haven

./: .gitignore  Cargo.toml  README.md  games.db
src/: db.rs  filesystem.rs  game_saves.rs  main.rs  shark_gui.rs
src/db/: model.sql
src/widgets/: layout.rs  mod.rs  popup.rs  table.rs
