[package]
name = "sharks_save_haven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
serde = { version = "1.0.130", features = ["derive"] }
rfd = "0.11"
chrono = "0.4.19"

[dependencies.egui_extras]
version = "0.21.0"
features = ["datepicker"]

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[profile.release]
# Enable optimizations for release mode
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "sharks_save_haven"
path = "src/main.rs"